# bil-kernel

./: Cargo.toml  OBSERVATION_ALGEBRA.md  README.md  bil_kernel_v0_1_spec.md
crates/bil-analyzer/: Cargo.toml
crates/bil-analyzer/src/: main.rs
crates/bil-codec/: Cargo.toml
crates/bil-codec/src/: lib.rs
crates/bil-core/: Cargo.toml
crates/bil-core/src/: error.rs  event.rs  lib.rs  primitives.rs  receipt.rs
crates/bil-crypto/: Cargo.toml
crates/bil-crypto/src/: lib.rs
crates/bil-projection/: Cargo.toml
crates/bil-receipt/: Cargo.toml
docs/: getting-started.md  kernel-model.md  projections-and-examples.md
examples/bank-projection/: Cargo.toml
examples/bank-projection/src/: lib.rs  main.rs
examples/insurance-projection/: Cargo.toml
examples/insurance-projection/src/: lib.rs  main.rs
examples/legal-projection/: Cargo.toml
examples/legal-projection/src/: lib.rs  main.rs
examples/observation-algebra-demo/: Cargo.toml
examples/observation-algebra-demo/src/: main.rs
examples/projection-demo/: Cargo.toml
examples/projection-demo/src/: main.rs
